// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-textArea-wrapper"
      name="textArea"
      rows="3"
      variant="filled"
      width="500"
    >
      <textarea
        aria-invalid="false"
        class="c2"
        data-testid="pbl-textArea"
        id="custom-id"
        rows="3"
        variant="filled"
      />
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 4px;
  color: var(--pbl-theme-colors-negative-main);
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: var(--pbl-theme-colors-negative-main);
  width: 500px;
}

.c1:focus {
  box-shadow: 0 0 0 3px var(--pbl-theme-colors-negative-lightest);
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-textArea-wrapper"
      error="[object Object]"
      name="textArea"
      rows="3"
      variant="filled"
      width="500"
    >
      <textarea
        aria-errormessage="custom-id-error"
        aria-invalid="true"
        class="c2"
        data-testid="pbl-textArea"
        error="[object Object]"
        id="custom-id"
        rows="3"
        variant="filled"
      >
        some
      </textarea>
    </div>
    <p
      aria-live="polite"
      class="c3"
      customstyles="[object Object]"
      data-testid="pbl-textArea-infotext"
      id="custom-id-error"
      mt="2"
      textcolor="negative.main"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 4px;
  color: var(--pbl-theme-colors-text-info);
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-textArea-wrapper"
      infotext="[object Object]"
      name="textArea"
      rows="3"
      variant="filled"
      width="500"
    >
      <textarea
        aria-describedby="custom-id-info"
        aria-invalid="false"
        class="c2"
        data-testid="pbl-textArea"
        id="custom-id"
        infotext="[object Object]"
        rows="3"
        variant="filled"
      >
        some
      </textarea>
    </div>
    <p
      aria-live="polite"
      class="c3"
      customstyles="[object Object]"
      data-testid="pbl-textArea-infotext"
      id="custom-id-info"
      mt="2"
      textcolor="text.info"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  margin-bottom: 6px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <label
      data-testid="pbl-textArea-label"
      for="custom-id"
    >
      <p
        class="c1"
        customstyles="[object Object]"
        mb="3"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="c2"
      cssstyles=","
      data-testid="pbl-textArea-wrapper"
      name="textArea"
      rows="3"
      variant="filled"
      width="500"
    >
      <textarea
        aria-invalid="false"
        class="c3"
        data-testid="pbl-textArea"
        id="custom-id"
        rows="3"
        variant="filled"
      >
        some
      </textarea>
    </div>
  </div>
</div>
`;
